--- a/Day 7/Step 1/task-info.yaml
+++ b/Day 7/Step 1/task-info.yaml
@@ -9,6 +9,9 @@ files:
   - name: solution.py
     visible: true
     learner_created: false
+  - name: reeborg_world.py
+    visible: true
+    learner_created: true
 status: Solved
-record: -1
+record: 6
 post_submission_on_open: true
