--- a/Day 13/Use a Debugger/task-info.yaml
+++ b/Day 13/Use a Debugger/task-info.yaml
@@ -9,6 +9,9 @@ files:
   - name: maths.py
     visible: true
     learner_created: false
-status: Unchecked
+  - name: Solutions for Exercises.py
+    visible: true
+    learner_created: true
+status: Solved
 record: -1
 post_submission_on_open: true
